--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,29 +1,34 @@
 <header >
 
     <div class="headerContainer">
-        
+
+        <div class="headerButtonContainer"> 
+            <div class="burgerMenu"> <i class="fa-sharp fa-solid fa-bars"></i> </div>
+                <ul class="menu">
+                    <li> <a href="/"> Inicio </a></li>
+                        <li> <a href="/users/login"> Iniciar session <i class="fa-solid fa-user"></i></a></li>
+                             <li> <a href="/shoppingCar"> carrito de compras<i class="fa-solid fa-cart-shopping"></i></a></li>
+                                 <li> favoritos <i class="fa-solid fa-star"></i></li>
+                                    </ul>
+                                            </div> 
+
+        <div class="headerAccess">
+            <ul class="aboutUs">
+                <li><a href="/">INICIO</a></li>
+                    <li><a href="#">¿QUIÉNES SOMOS?</a></li>
+                        <li><a href="/products">PRODUCTOS</a></li>
+                            </ul>
+                                </div>
+
+
         <div class="headerLogoContainer">
             <img class="logo" src="/images/logo/logoprueba.jpg" alt="logo">
                 </div>
 
-    <div class="headerAccess">
-            <nav><a href="/">INICIO</a></nav>
-            <nav><a href="#">¿QUIÉNES SOMOS?</a></nav>
-            <nav><a href="/products">PRODUCTOS</a></nav>
-    </div>
+          
+     </div>
 
-    <div class="headerButtonContainer">
-            <button class="headerbuttons"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <!-- <form action="">           habra que usarlo luego supongo . 
-                    <input class="searchBar" type="text" placeholder="  Que estas buscando...?" > </form> -->
-        
-                <button class="headerbuttons"><a href="/users/login"><i class="fa-solid fa-user"></i></a></button>
-                    <button class="headerbuttons"><a href="/shoppingCar"><i class="fa-solid fa-cart-shopping"></i></a></button>
-                        <button class="headerbuttons"><i class="fa-solid fa-star"></i></button>
-                            </div>
-                        
-        
-
-    </div>
+    <script src="/js/header.js"></script>
 
 </header>
+
