--- a/src/views/partials/filters.ejs
+++ b/src/views/partials/filters.ejs
@@ -1,7 +1,7 @@
 <div class="filtersContainer">
 
     <div class="filtersImagen"> 
-        <img src="/images/banners/diamadres.jpg" alt="" >
+        <img src="/images/banners/diamadres.jpg" alt="fondo pantalla" >
     </div>
 
     <div class="filtersButtonsContainer">
@@ -12,34 +12,44 @@
                 <li> <a href="/"> Xiaomi </a>
                     <ul>
                         <li> <a href="/"> MI   </a> </li>
-                        <li> <a href="/">Poco  </a> </li>
-                        <li> <a href="/">Redmi </a> </li>
+                            <li> <a href="/">Poco  </a> </li>
+                                <li> <a href="/">Redmi </a> </li>
                     </ul>
                 </li>
-                <li> <a href="/"> Realme  </a> </li>
-                <li> <a href="/"> Samsung </a> </li>
-                <li> <a href="/"> Iphone  </a> </li>
-                <li> <a href="/"> Huawei  </a> </li>
-            </ul>
+                    <li> <a href="/"> Realme  </a> </li>
+                        <li> <a href="/"> Samsung </a> </li>
+                            <li> <a href="/"> Iphone  </a> </li>
+                                <li> <a href="/"> Huawei  </a> </li>
+                                    </ul>
         </button>
 
         <button class="filtersButtons"> <i class="fa-solid fa-desktop"> </i> </a>
             <ul class="desktop">
                 <li> <a href="/"> Samsung </a> </li>
-                <li> <a href="/"> Apple  </a> </li>
-                <li> <a href="/"> Hp </a> </li>
-            </ul>
+                    <li> <a href="/"> Apple  </a> </li>
+                        <li> <a href="/"> Hp </a> </li>
+                             </ul>
         </button>
 
         <button class="filtersButtons"> <i class="fa-solid fa-headphones"> </i> </a>
             <ul class="accesories">
                 <li> <a href="/"> Audifonos  </a> </li>
-                <li> <a href="/"> Cargadores </a> </li>
-                <li> <a href="/"> Relojes    </a> </li>
-                <li> <a href="/"> Fundas     </a> </li>
-            </ul>
+                    <li> <a href="/"> Cargadores </a> </li>
+                        <li> <a href="/"> Relojes    </a> </li>
+                            <li> <a href="/"> Fundas     </a> </li>
+                                </ul>
         </button>
                     
+    </div>
+
+    <div class="filtersBrandscontainer"> 
+        <ul class="brandImages"> 
+             <li> <a href="/"><img src="/images/logo/huawei.png" alt="" /></a> </li>
+                 <li> <a href="/"><img src="/images/logo/apple.png" alt="" /></a> </li>
+                     <li> <a href="/"><img src="/images/logo/realme.png" alt="" /></a> </li>
+                         <li> <a href="/"><img src="/images/logo/samsung.jpg" alt="" /></a> </li>
+                             <li> <a href="/"><img src="/images/logo/xioami.png" alt="" /></a> </li>
+                                </ul>
     </div>
   
     <script src="/js/filters.js"></script>
