--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,22 +8,15 @@
     <main>
         <%- include('sliderBanner') %> 
      
+        <h1> Todo lo que necesitas en un solo lugar </h1>
 
+        <%- include('carrousels') %>
 
-
-
-
-
+        
 
 
 
 <!-- esto es el contenido de mi proyecto  -->
-
-
-
-
-
-
 
 
 
