Primer carrousel funcional :D

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -4,3 +4,14 @@ body{
     align-items: center;
     flex-direction: column;
 }
+
+.bodyTittle{
+    background-image: url("/images/background/back.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+
+.bodyTittle h1{
+    color: whitesmoke;
+}
