--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -3,6 +3,8 @@
     <!------------------------------ primer carrousel  -->
 
     <h1> Trending </h1>
+        <button id='prev' class="btn">prev</button>
+            <button id='next' class="btn">next</button>
 
     <div class="carousel">
 
@@ -19,9 +21,9 @@
                         </div>
 
         <div class="trending">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
+            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
+                    <p>Precio: $1.700.000</p>
                         </div>
 
         <div class="trending">
@@ -30,15 +32,36 @@
                     <p>Precio: $1.050.000</p>
                         </div>
 
+
         <div class="trending">
-            <img src="/images/phones/samsung/galazyZF4.jpeg" />
+            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
                 <h3> Samsung Galaxy Z Flip 4 128gb </h3>
                     <p>Precio: $3.500.00</p>
                         </div>
+
+        <div class="trending">
+            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                <h3> Iphone 13 Pro max 256gb </h3>
+                    <p>Precio: $5.250.000</p>
+                        </div> 
+                        
+        <div class="trending">
+            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
+                    <p>Precio: $1.450.000</p>
+                        </div>
+                        
+        <div class="trending">
+            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
+                    <p>Precio: $6.649.00</p>
+                        </div>
+
+        
     </div>
 <!-------------------------------------- segundo carrousel  -->
 
-    <h1> Ofertas Imperdibles </h1>
+    <!-- <h1> Ofertas Imperdibles </h1>
     
     <div class="carousel">
 
@@ -73,8 +96,8 @@
                         </div>
     </div>
 
-    <!------------------- tercer carrousel  -->
-
+   ----------------- tercer carrousel  -->
+<!-- 
     <h1> Accesorios </h1>
     
     <div class="carousel">
@@ -108,7 +131,7 @@
                 <h3> Samsung Galaxy Z Flip 4 128gb </h3>
                     <p>Precio: $3.500.00</p>
                         </div>
-    </div>
+    </div> --> 
 
     <script src="/js/carrousel.js"></script>
 
