--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,8 +7,10 @@
 
     <main>
         <%- include('sliderBanner') %> 
-     
+
+     <div class="bodyTittle"> 
         <h1> Todo lo que necesitas en un solo lugar </h1>
+            </div>
 
         <%- include('carrousels') %>
 
