--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -3,8 +3,8 @@
     <!------------------------------ primer carrousel  -->
 
     <h1> Trending </h1>
-        <button id='prev' class="btn">prev</button>
-            <button id='next' class="btn">next</button>
+        <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
+            <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
 
     <div class="carousel">
 
@@ -61,77 +61,123 @@
     </div>
 <!-------------------------------------- segundo carrousel  -->
 
-    <!-- <h1> Ofertas Imperdibles </h1>
-    
-    <div class="carousel">
+    <h1> Ofertas para dia de la madre </h1>
+        <button id='prev2' class="fa-solid fa-circle-chevron-left btn2"> </button>
+            <button id='next2' class="fa-solid fa-circle-chevron-right btn2 "> </button>
 
-        <div class="trending">
+    <div class="carouselTwo">
+
+        <div class="trendingTwo">
             <img src="/images/phones/iphone/iphone14ProMx.jpg" />
                 <h3> Iphone 14 Pro max 256gb </h3>
                     <p>Precio: $6.149.000</p>
                         </div>
 
-        <div class="trending">
+        <div class="trendingTwo">
             <img src="/images/phones/samsung/galaxyS23U.jpg" />
                 <h3> Samsung Galaxy S23 Ultra 512gb  </h3>
                     <p>Precio: $5.650.000</p>
                         </div>
 
-        <div class="trending">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
+        <div class="trendingTwo">
+            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
+                    <p>Precio: $1.700.000</p>
                         </div>
 
-        <div class="trending">
+        <div class="trendingTwo">
             <img src="/images/phones/realme/realme9Pro.jpg" />
                 <h3> Realme 9 Pro 128gb </h3>
                     <p>Precio: $1.050.000</p>
                         </div>
 
-        <div class="trending">
-            <img src="/images/phones/samsung/galazyZF4.jpeg" />
+
+        <div class="trendingTwo">
+            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
                 <h3> Samsung Galaxy Z Flip 4 128gb </h3>
                     <p>Precio: $3.500.00</p>
                         </div>
+
+        <div class="trendingTwo">
+            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                <h3> Iphone 13 Pro max 256gb </h3>
+                    <p>Precio: $5.250.000</p>
+                        </div> 
+                        
+        <div class="trendingTwo">
+            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
+                    <p>Precio: $1.450.000</p>
+                        </div>
+                        
+        <div class="trendingTwo">
+            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
+                    <p>Precio: $6.649.00</p>
+                        </div>
+
+        
     </div>
+   
+<!-- ----------------- tercer carrousel  -->
 
-   ----------------- tercer carrousel  -->
-<!-- 
     <h1> Accesorios </h1>
-    
-    <div class="carousel">
+        <button id='prev3' class="fa-solid fa-circle-chevron-left btn3"> </button>
+            <button id='next3' class="fa-solid fa-circle-chevron-right btn3 "> </button>
 
-        <div class="trending">
+    <div class="carouselThree">
+
+        <div class="trendingThree">
             <img src="/images/phones/iphone/iphone14ProMx.jpg" />
                 <h3> Iphone 14 Pro max 256gb </h3>
                     <p>Precio: $6.149.000</p>
                         </div>
 
-        <div class="trending">
+        <div class="trendingThree">
             <img src="/images/phones/samsung/galaxyS23U.jpg" />
                 <h3> Samsung Galaxy S23 Ultra 512gb  </h3>
                     <p>Precio: $5.650.000</p>
                         </div>
 
-        <div class="trending">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
+        <div class="trendingThree">
+            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
+                    <p>Precio: $1.700.000</p>
                         </div>
 
-        <div class="trending">
+        <div class="trendingThree">
             <img src="/images/phones/realme/realme9Pro.jpg" />
                 <h3> Realme 9 Pro 128gb </h3>
                     <p>Precio: $1.050.000</p>
                         </div>
 
-        <div class="trending">
-            <img src="/images/phones/samsung/galazyZF4.jpeg" />
+
+        <div class="trendingThree">
+            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
                 <h3> Samsung Galaxy Z Flip 4 128gb </h3>
                     <p>Precio: $3.500.00</p>
                         </div>
-    </div> --> 
+
+        <div class="trendingThree">
+            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                <h3> Iphone 13 Pro max 256gb </h3>
+                    <p>Precio: $5.250.000</p>
+                        </div> 
+                        
+        <div class="trendingThree">
+            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
+                    <p>Precio: $1.450.000</p>
+                        </div>
+                        
+        <div class="trendingThree">
+            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
+                    <p>Precio: $6.649.00</p>
+                        </div>
+
+        
+    </div>
 
     <script src="/js/carrousel.js"></script>
 
