--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -2,9 +2,10 @@
 
     <!------------------------------ primer carrousel  -->
 
+<section class="carouselTitle">
     <h1> Trending </h1>
-        <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
-            <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
+        <p> Los productos con mayor relevancia del año</p>
+            </section>
 
     <div class="carousel">
 
@@ -56,14 +57,18 @@
                 <h3> Samsung Galaxy Z Fold 4 256gb </h3>
                     <p>Precio: $6.649.00</p>
                         </div>
-
-        
+ 
     </div>
+
+    <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
+    <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
+
 <!-------------------------------------- segundo carrousel  -->
 
-    <h1> Ofertas para dia de la madre </h1>
-        <button id='prev2' class="fa-solid fa-circle-chevron-left btn2"> </button>
-            <button id='next2' class="fa-solid fa-circle-chevron-right btn2 "> </button>
+<section class="carouselTitle">
+    <h1> Ofertas Imperdibles </h1>
+        <p> Para dar un obsequio en esas fechas especiales </p>
+            </section>       
 
     <div class="carouselTwo">
 
@@ -116,14 +121,17 @@
                     <p>Precio: $6.649.00</p>
                         </div>
 
-        
     </div>
+
+    <button id='prev2' class="fa-solid fa-circle-chevron-left btn2"> </button>
+    <button id='next2' class="fa-solid fa-circle-chevron-right btn2 "> </button>
    
 <!-- ----------------- tercer carrousel  -->
 
+<section class="carouselTitle">
     <h1> Accesorios </h1>
-        <button id='prev3' class="fa-solid fa-circle-chevron-left btn3"> </button>
-            <button id='next3' class="fa-solid fa-circle-chevron-right btn3 "> </button>
+        <p> Complementa tu estilo </p>
+            </section>
 
     <div class="carouselThree">
 
@@ -176,9 +184,11 @@
                     <p>Precio: $6.649.00</p>
                         </div>
 
-        
     </div>
 
-    <script src="/js/carrousel.js"></script>
+    <button id='prev3' class="fa-solid fa-circle-chevron-left btn3"> </button>
+    <button id='next3' class="fa-solid fa-circle-chevron-right btn3 "> </button>
 
 </div>
+
+<script src="/js/carrousel.js"></script>
