--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,27 +3,25 @@
 <body>
 
     <%- include('partials/header') %>
+    
     <%- include('partials/filters') %>
 
     <main>
         <%- include('sliderBanner') %> 
 
-     <div class="bodyTittle"> 
-        <h1> Todo lo que necesitas en un solo lugar </h1>
-            </div>
-
         <%- include('carrousels') %>
 
-        
-
-
-
-<!-- esto es el contenido de mi proyecto  -->
-
-
-
-
-
     </main>
+
+    <section class="preFooterContainer">
+
+        <div class="bannerBottom">
+            <img src="/images/banners/reportados.png" alt="" >
+                </div>
+
+
+
+
+    </section>
 
 </body>
