--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,15 +13,37 @@
 
     </main>
 
-    <section class="preFooterContainer">
+    <section class="bannerFooterContainer">
 
         <div class="bannerBottom">
             <img src="/images/banners/reportados.png" alt="" >
-                </div>
+        </div>
+
+        <div class="shippingContainer">
+            
+            <div class="shipping">
+                <h3>Recibe tu producto</h3>
+                    <i class="fa-sharp fa-solid fa-truck-fast icn"></i>
+                        <p> Recibe el producto en tu casa o en una sucursal de correo, y sigue tu compra hasta que llegue a tus manos </p>
+                    </div>
+
+            <div class="shipping">
+                <h3>Compra protegida</h3>
+                    <i class="fa-sharp fa-solid fa-bag-shopping icn"></i>
+                        <p> Te acompañamos hasta que recibas lo que compraste y si no es lo que esperabas te devolvemos el dinero</p>
+                    </div>
+
+        </div>
 
 
-
+        <div class="payments">
+            <h3>Metodos de pago</h3>
+                    <img src="/images/logo/medios.jpg" alt="hilera tablero de pagos" >
+        </div>
 
     </section>
 
+    <%- include('partials/footer') %>
+
 </body>
+
