--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,53 @@
-<div class="footerContainer">
+<footer>
+
+    <section class="footerTittle">
+        <h1> MUNDO TECH </h1>
+            <P> Mas que un producto, un estilo</P>
+   </section>
+
+    <section class="detailsContainer">   
+        
+        <div class="details">
+            <h3>SIGUENOS EN</h3>
+                <div class="redes">
+                    <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-facebook"></i>
+                                    </div>
+        </div>
+
+        <div class="details">
+            <h3>CONTACTO</h3>
+                <h4><i class="fa-solid fa-location-dot"></i> Ubicación</h4>
+                    <h4><i class="fa-solid fa-phone"></i> 3219077777</h4>
+                        <h4><i class="fa-solid fa-envelope"></i> Mundotech_Global@outlook.es </h4>
+                            <h4><i class="fa-solid fa-alarm-clock"></i> Lun-Sab 8:00 - 6:00hs</h4>
+        </div>
+
+        <div class="details">
+            <h3>INFORMACIÓN</h3>
+                <ul class="listInfo">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Conocenos</a></li>
+                    <li><a href="#">Categorias</a></li>
+                    <li><a href="#">Productos</a></li>
+                        </ul>
+        </div>
+
+        <div class="details">
+            <h3>ASISTENCIA</h3>
+                <ul class="listConditions">
+                    <li><a href=""> Términos y condiciones</a> </li>
+                    <li><a href=""> Bases y condiciones</a></li>
+                    <li><a href="">Política de Privacidad</a></li>
+                    <li><a href="">Centro de ayuda</a></li>
+                        </ul>
+        </div>
 
 
+    
+    </section>
 
-</div>
+</footer>
+
