--- a/src/public/css/partialsStyles.css
+++ b/src/public/css/partialsStyles.css
@@ -78,6 +78,8 @@ button {
     border-color: lightgray
 }
 
+/*--------- Filter container -----------------*/
+
 .filtersButtonsContainer {
     position: absolute;
     top: 90px;
@@ -131,6 +133,38 @@ button {
 .filtersContainer img{
     max-width: 100%;
 }
+
+/* ------------footer container ------------------*/
+
+footer{
+    background-image: url("/images/background/back.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+}
+
+.footerTittle{
+    margin: 40px 0px;
+}
+
+.details{
+    box-shadow: 0px 0px 20px -2px #fff;
+    border-radius: 12px;
+    padding: 10px;
+    margin: 15px;
+}
+
+.details h3 {
+    border-bottom: #fff 1px dotted;
+    margin-bottom: 10px;
+}
+
+.details h4, .listInfo, .listConditions{
+    font-size: 13px;
+}
+
 
 
 
