--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -17,8 +17,9 @@
                 <li><a href="/">INICIO</a></li>
                     <li><a href="#">¿QUIÉNES SOMOS?</a></li>
                         <li><a href="/products">PRODUCTOS</a></li>
-                            </ul>
-                                </div>
+                            <li><a href="#">CATEGORIAS</a></li>
+                                </ul>
+                                    </div>
 
 
         <div class="headerLogoContainer">
