--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,20 +6,19 @@
             <div class="burgerMenu"> <i class="fa-sharp fa-solid fa-bars"></i> </div>
                 <ul class="menu">
                     <li> <a href="/"> Inicio </a></li>
-                        <li> <a href="/users/login"> Iniciar session <i class="fa-solid fa-user"></i></a></li>
-                             <li> <a href="/shoppingCar"> carrito de compras<i class="fa-solid fa-cart-shopping"></i></a></li>
-                                 <li> favoritos <i class="fa-solid fa-star"></i></li>
+                        <li> <i class="fa-solid fa-user"></i><a href="/users/login"> Iniciar session </a></li>
+                             <li> <i class="fa-solid fa-cart-shopping"></i> <a href="/shoppingCar"> Carrito de compras </a></li>
+                                 <li> <i class="fa-solid fa-star"></i> Favoritos </li>
                                     </ul>
-                                            </div> 
+                                        </div> 
 
         <div class="headerAccess">
             <ul class="aboutUs">
                 <li><a href="/">INICIO</a></li>
                     <li><a href="#">¿QUIÉNES SOMOS?</a></li>
                         <li><a href="/products">PRODUCTOS</a></li>
-                            <li><a href="#">CATEGORIAS</a></li>
-                                </ul>
-                                    </div>
+                            </ul>
+                                </div>
 
 
         <div class="headerLogoContainer">
