--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,3 +1,4 @@
+
 body{
     display: flex;
     justify-content: center; 
@@ -40,6 +41,14 @@ body{
 }
 
 .payments img{
-    margin-top: 10px;
+    margin: 10px 0px;
     max-width: 100%;
+}
+
+@media (min-width: 769px) and (orientation: portrait) {
+
+    .shippingContainer{
+        margin-left: -15px;
+        margin-right: 20px;
+    }
 }
