--- a/src/public/css/sliderCarrouselStyles.css
+++ b/src/public/css/sliderCarrouselStyles.css
@@ -36,8 +36,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+	height: 50px;
 	color: white;
-	padding-left: 20px;
+	padding-left: 30px;
 }
 
 .carouselTitle p{
@@ -46,7 +47,7 @@
 
 .carousel, .carouselTwo, .carouselThree {
 	display: flex;
-	margin: 0px 15px;
+	margin: 10px;
 	overflow-x: hidden;
 	transition: transform 0.5s ease-in-out;
 }
@@ -78,41 +79,21 @@
 }
 
   
-.btn, .btn2, .btn3 {
-	position: absolute;
-	transform: translateY(-50%);
+.btn {
+	position: relative;
 	border: none;
     background-color: transparent;
+	color: lightgray;
 }
   
-#prev{
-	bottom: 100px;
-	left: -7px;
+#prev, #prev2, #prev3 {
+	bottom: 150px;
+    left: -24px;
 }
 
-#prev2{
-	bottom: -175px;
-	left: -7px;
-}
-
-#prev3{
-	bottom: -450px;
-	left: -7px;
-}
-  
-#next {
-	right: 2px;
-    bottom: 100px;
-}
-
-#next2{
-	right: 2px;
-    bottom: -175px;
-}
-
-#next3{
-	right: 2px;
-    bottom: -450px;
+#next, #next2, #next3  {
+	right: -17.5rem;
+    bottom: 150px;
 }
 
 @keyframes slide {
@@ -127,4 +108,59 @@
 	
 	75% {margin-left: -300%;}
 	100% {margin-left: -300%;}
+}
+
+/*--------- break Points------------------ */
+
+@media (min-width: 461px) and (orientation: portrait) {
+
+	.slider-frame img {
+		height: 250px;
+	}
+
+	.trending, .trendingTwo, .trendingThree {
+		width: calc(94% / 4);
+		text-align: center;
+    	
+	}
+	.carousel, .carouselTwo, .carouselThree{
+		margin-left: 25px;
+
+	}
+
+	#next, #next2, #next3  {
+		right: -22rem;
+	}
+}
+
+@media (min-width: 520px) and (orientation: portrait) {
+
+	.carouselTitle {
+		height: 60px;
+	}
+
+	#next, #next2, #next3 {
+		right: -25.5rem;
+	}
+}
+
+@media (min-width: 600px) and (orientation: portrait) {
+
+	#next, #next2, #next3 {
+		right: -30rem;
+	}
+}
+
+/*----- Tablet queries ------------- */
+
+@media (min-width: 769px) and (orientation: portrait) {
+
+	.trending, .trendingTwo, .trendingThree {
+		width: calc(92% / 5);
+		text-align: center;
+	}
+
+	#next, #next2, #next3 {
+		right: -37rem;
+	}
 }
