--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -10,58 +10,68 @@
     <div class="carousel">
 
         <div class="trending">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone14ProMx.jpg" />
+                    <h3><a href="/">Iphone 14 Pro max</a></h3>
+                        <p>Precio: $6.149.000</p>
+                            </div>
 
         <div class="trending">
-            <img src="/images/phones/samsung/galaxyS23U.jpg" />
-                <h3> Samsung Galaxy S23 Ultra 512gb  </h3>
-                    <p>Precio: $5.650.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyS23U.jpg" />
+                    <h3><a href="/">Samsung Galaxy S23 Ultra</a></h3>
+                        <p>Precio: $5.650.000</p>
+                            </div>
 
         <div class="trending">
-            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
-                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
-                    <p>Precio: $1.700.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                    <h3><a href="/">Xiaomi Redmi Note 12 Pro+</a></h3>
+                        <p>Precio: $1.700.000</p>
+                            </div>
 
         <div class="trending">
-            <img src="/images/phones/realme/realme9Pro.jpg" />
-                <h3> Realme 9 Pro 128gb </h3>
-                    <p>Precio: $1.050.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/realme/realme9Pro.jpg" />
+                    <h3><a href="/">Realme 9 Pro </a></h3>
+                        <p>Precio: $1.050.000</p>
+                            </div>
 
 
         <div class="trending">
-            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
-                <h3> Samsung Galaxy Z Flip 4 128gb </h3>
-                    <p>Precio: $3.500.00</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZF4.jpeg" />
+                    <h3><a href="/">Samsung Galaxy Z Flip 4 </a></h3>
+                        <p>Precio: $3.500.00</p>
+                            </div>
 
         <div class="trending">
-            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
-                <h3> Iphone 13 Pro max 256gb </h3>
-                    <p>Precio: $5.250.000</p>
-                        </div> 
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                    <h3><a href="/">Iphone 13 Pro max </a></h3>
+                        <p>Precio: $5.250.000</p>
+                            </div> 
                         
         <div class="trending">
-            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
-                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
-                    <p>Precio: $1.450.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                    <h3><a href="/"> Xioami Redmi Note 11 Pro+ </a></h3>
+                        <p>Precio: $1.450.000</p>
+                            </div>
                         
         <div class="trending">
-            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
-                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
-                    <p>Precio: $6.649.00</p>
-                        </div>
- 
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                    <h3><a href="/">Samsung Galaxy Z Fold 4 </a></h3>
+                        <p>Precio: $6.649.00</p>
+                            </div>
+
     </div>
 
-    <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
-    <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
+    <div> 
+        <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
+            <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
+    </div>
 
 <!-------------------------------------- segundo carrousel  -->
 
@@ -73,58 +83,68 @@
     <div class="carouselTwo">
 
         <div class="trendingTwo">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone14ProMx.jpg" />
+                    <h3><a href="/">Iphone 14 Pro max</a></h3>
+                        <p>Precio: $6.149.000</p>
+                            </div>
 
         <div class="trendingTwo">
-            <img src="/images/phones/samsung/galaxyS23U.jpg" />
-                <h3> Samsung Galaxy S23 Ultra 512gb  </h3>
-                    <p>Precio: $5.650.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyS23U.jpg" />
+                    <h3><a href="/">Samsung Galaxy S23 Ultra</a></h3>
+                        <p>Precio: $5.650.000</p>
+                            </div>
 
         <div class="trendingTwo">
-            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
-                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
-                    <p>Precio: $1.700.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                    <h3><a href="/">Xiaomi Redmi Note 12 Pro+</a></h3>
+                        <p>Precio: $1.700.000</p>
+                            </div>
 
         <div class="trendingTwo">
-            <img src="/images/phones/realme/realme9Pro.jpg" />
-                <h3> Realme 9 Pro 128gb </h3>
-                    <p>Precio: $1.050.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/realme/realme9Pro.jpg" />
+                    <h3><a href="/">Realme 9 Pro </a></h3>
+                        <p>Precio: $1.050.000</p>
+                            </div>
 
 
         <div class="trendingTwo">
-            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
-                <h3> Samsung Galaxy Z Flip 4 128gb </h3>
-                    <p>Precio: $3.500.00</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZF4.jpeg" />
+                    <h3><a href="/">Samsung Galaxy Z Flip 4 </a></h3>
+                        <p>Precio: $3.500.00</p>
+                            </div>
 
         <div class="trendingTwo">
-            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
-                <h3> Iphone 13 Pro max 256gb </h3>
-                    <p>Precio: $5.250.000</p>
-                        </div> 
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                    <h3><a href="/">Iphone 13 Pro max </a></h3>
+                        <p>Precio: $5.250.000</p>
+                            </div> 
                         
         <div class="trendingTwo">
-            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
-                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
-                    <p>Precio: $1.450.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                    <h3><a href="/"> Xioami Redmi Note 11 Pro+ </a></h3>
+                        <p>Precio: $1.450.000</p>
+                            </div>
                         
         <div class="trendingTwo">
-            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
-                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
-                    <p>Precio: $6.649.00</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                    <h3><a href="/">Samsung Galaxy Z Fold 4 </a></h3>
+                        <p>Precio: $6.649.00</p>
+                            </div>
 
     </div>
 
-    <button id='prev2' class="fa-solid fa-circle-chevron-left btn2"> </button>
-    <button id='next2' class="fa-solid fa-circle-chevron-right btn2 "> </button>
+    <div> 
+        <button id='prev2' class="fa-solid fa-circle-chevron-left btn"> </button>
+            <button id='next2' class="fa-solid fa-circle-chevron-right btn "> </button>
+    </div>
    
 <!-- ----------------- tercer carrousel  -->
 
@@ -136,58 +156,68 @@
     <div class="carouselThree">
 
         <div class="trendingThree">
-            <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                <h3> Iphone 14 Pro max 256gb </h3>
-                    <p>Precio: $6.149.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone14ProMx.jpg" />
+                    <h3><a href="/">Iphone 14 Pro max</a></h3>
+                        <p>Precio: $6.149.000</p>
+                            </div>
 
         <div class="trendingThree">
-            <img src="/images/phones/samsung/galaxyS23U.jpg" />
-                <h3> Samsung Galaxy S23 Ultra 512gb  </h3>
-                    <p>Precio: $5.650.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyS23U.jpg" />
+                    <h3><a href="/">Samsung Galaxy S23 Ultra</a></h3>
+                        <p>Precio: $5.650.000</p>
+                            </div>
 
         <div class="trendingThree">
-            <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
-                <h3> Xiaomi Redmi Note 12 Pro+ 256gv </h3>
-                    <p>Precio: $1.700.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
+                    <h3><a href="/">Xiaomi Redmi Note 12 Pro+</a></h3>
+                        <p>Precio: $1.700.000</p>
+                            </div>
 
         <div class="trendingThree">
-            <img src="/images/phones/realme/realme9Pro.jpg" />
-                <h3> Realme 9 Pro 128gb </h3>
-                    <p>Precio: $1.050.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/realme/realme9Pro.jpg" />
+                    <h3><a href="/">Realme 9 Pro </a></h3>
+                        <p>Precio: $1.050.000</p>
+                            </div>
 
 
         <div class="trendingThree">
-            <img src="/images/phones/samsung/galaxyZF4.jpeg" />
-                <h3> Samsung Galaxy Z Flip 4 128gb </h3>
-                    <p>Precio: $3.500.00</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZF4.jpeg" />
+                    <h3><a href="/">Samsung Galaxy Z Flip 4 </a></h3>
+                        <p>Precio: $3.500.00</p>
+                            </div>
 
         <div class="trendingThree">
-            <img src="/images/phones/iphone/iphone13ProMx.jpg" />
-                <h3> Iphone 13 Pro max 256gb </h3>
-                    <p>Precio: $5.250.000</p>
-                        </div> 
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/iphone/iphone13ProMx.jpg" />
+                    <h3><a href="/">Iphone 13 Pro max </a></h3>
+                        <p>Precio: $5.250.000</p>
+                            </div> 
                         
         <div class="trendingThree">
-            <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
-                <h3> Xioami Redmi Note 11 Pro+ 128gb </h3>
-                    <p>Precio: $1.450.000</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
+                    <h3><a href="/"> Xioami Redmi Note 11 Pro+ </a></h3>
+                        <p>Precio: $1.450.000</p>
+                            </div>
                         
         <div class="trendingThree">
-            <img src="/images/phones/samsung/galaxyZFl4.jpg" />
-                <h3> Samsung Galaxy Z Fold 4 256gb </h3>
-                    <p>Precio: $6.649.00</p>
-                        </div>
+            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
+                <img src="/images/phones/samsung/galaxyZFl4.jpg" />
+                    <h3><a href="/">Samsung Galaxy Z Fold 4 </a></h3>
+                        <p>Precio: $6.649.00</p>
+                            </div>
 
     </div>
 
-    <button id='prev3' class="fa-solid fa-circle-chevron-left btn3"> </button>
-    <button id='next3' class="fa-solid fa-circle-chevron-right btn3 "> </button>
+    <div> 
+        <button id='prev3' class="fa-solid fa-circle-chevron-left btn"> </button>
+            <button id='next3' class="fa-solid fa-circle-chevron-right btn "> </button>
+    </div>
 
 </div>
 
