--- a/src/views/partials/filters.ejs
+++ b/src/views/partials/filters.ejs
@@ -8,14 +8,7 @@
 
         <button class="filtersButtons"> <i class="fa-solid fa-mobile-button"> </i> </a>
             <ul class="mobile">  
-                <!-- debo resolver la incognita de como separar esto mediante hipervinculos  -->
-                <li> <a href="/"> Xiaomi </a>
-                    <ul>
-                        <li> <a href="/"> MI   </a> </li>
-                            <li> <a href="/">Poco  </a> </li>
-                                <li> <a href="/">Redmi </a> </li>
-                    </ul>
-                </li>
+                <li> <a href="/"> Xiaomi </a> </li>
                     <li> <a href="/"> Realme  </a> </li>
                         <li> <a href="/"> Samsung </a> </li>
                             <li> <a href="/"> Iphone  </a> </li>
@@ -27,7 +20,8 @@
             <ul class="desktop">
                 <li> <a href="/"> Samsung </a> </li>
                     <li> <a href="/"> Apple  </a> </li>
-                        <li> <a href="/"> Hp </a> </li>
+                        <li> <a href="/"> Lenovo </a> </li>
+                            <li> <a href="/"> Hp </a> </li>
                              </ul>
         </button>
 
