conectando  rutas de login y registro al frontend

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,8 +5,8 @@
         <div class="headerButtonContainer"> 
             <div class="burgerMenu"> <i class="fa-sharp fa-solid fa-bars"></i> </div>
                 <ul class="menu">
-                    <li> <a href="/"> Inicio </a></li>
-                        <li> <i class="fa-solid fa-user"></i><a href="/users/login"> Iniciar session </a></li>
+                    <li> <a href="/"> home </a></li>
+                        <li> <i class="fa-solid fa-user"></i><a href="/users/loginRegister"> Iniciar session </a></li>
                              <li> <i class="fa-solid fa-cart-shopping"></i> <a href="/shoppingCar"> Carrito de compras </a></li>
                                  <li> <i class="fa-solid fa-star"></i> Favoritos </li>
                                     </ul>
