--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/439c181295.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/partialsStyles.css">
-    <link rel="stylesheet" href="/css/sliderCarrouselStyles.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/partials.css">
+    <link rel="stylesheet" href="/css/sliderCarrousel.css">
+    <link rel="stylesheet" href="/css/loginRegister.css">
 
    
     <% if (locals.styles && Array.isArray(locals.styles)) { styles.forEach(style=> {%>
