banco de imagenes completas

--- a/src/views/partials/filters.ejs
+++ b/src/views/partials/filters.ejs
@@ -27,10 +27,10 @@
 
         <button class="filtersButtons"> <i class="fa-solid fa-headphones"> </i> </a>
             <ul class="accesories">
-                <li> <a href="/"> Audifonos  </a> </li>
+                <li> <a href="/"> Gadgets  </a> </li>
                     <li> <a href="/"> Cargadores </a> </li>
-                        <li> <a href="/"> Relojes    </a> </li>
-                            <li> <a href="/"> Fundas     </a> </li>
+                        <li> <a href="/"> Accesorios </a> </li>
+                            <li> <a href="/"> Fundas </a> </li>
                                 </ul>
         </button>
                     
