--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -68,7 +68,7 @@
 
     </div>
 
-    <div> 
+    <div class="carouselButtons"> 
         <button id='prev' class="fa-solid fa-circle-chevron-left btn"> </button>
             <button id='next' class="fa-solid fa-circle-chevron-right btn "> </button>
     </div>
@@ -141,7 +141,7 @@
 
     </div>
 
-    <div> 
+    <div class="carouselButtons"> 
         <button id='prev2' class="fa-solid fa-circle-chevron-left btn"> </button>
             <button id='next2' class="fa-solid fa-circle-chevron-right btn "> </button>
     </div>
@@ -214,7 +214,7 @@
 
     </div>
 
-    <div> 
+    <div class="carouselButtons"> 
         <button id='prev3' class="fa-solid fa-circle-chevron-left btn"> </button>
             <button id='next3' class="fa-solid fa-circle-chevron-right btn "> </button>
     </div>
