--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -45,10 +45,44 @@ body{
     max-width: 100%;
 }
 
-@media (min-width: 769px) and (orientation: portrait) {
+@media (min-width: 769px) {
 
     .shippingContainer{
         margin-left: -15px;
         margin-right: 20px;
     }
 }
+
+/* ----------- desktop queries --------------- */
+
+@media (min-width: 900px) {
+
+    html {
+        font-size: 25px;
+    }
+    
+    p {
+        font-size: 30px;
+    }
+
+    .bannerBottom img {
+        height: 500px;
+    }
+
+    .shipping p {
+        font-size: 30px;
+    }
+
+    .payments h3 {
+        font-size: 45px;
+    }
+
+    .payments img {
+        margin: 25px 0px;
+        max-width: 100%;
+        height: 180px;
+    }
+
+}
+
+
