--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -19,19 +19,19 @@ variables Paleta Colores
     box-sizing: border-box;
     }
 
-body {
+/* bodyu {
     font-family: var(--ff);
     font-size: var(--ff-body);
     line-height: 1em;
     }
     
-button {
+buttonundefine {
     background-color: transparent;
     padding: 0;
     border: 0;
     outline: 0;
     cursor: pointer;
-    }
+    } */
     
 input {
     background-color: transparent;
