--- a/src/public/css/partials.css
+++ b/src/public/css/partials.css
@@ -68,7 +68,7 @@ header{
 
 .filtersButtonsContainer {
     position: absolute;
-    top: 85px;
+    top: 100px;
     right: 25px;
 }
 
@@ -88,7 +88,6 @@ button {
     width: 90px;
     height: 17%;
     background-color: lightsteelblue ;
-    /* box-shadow: 0px 0px 15px -2px #fff; */
     border-radius: 18px;
     margin-top: 5px;
     right: -200px;
@@ -171,13 +170,15 @@ footer{
 /* break points ----- */
 
 @media (min-width: 650px){
-	button {
-		width: 55px;
-    	height: 30px;
-	}
 
 	.filtersButtonsContainer {
+        top: 130px;
 		right: 55px;
+	}
+
+    .filtersButtonsContainer button {
+		width: 55px;
+    	height: 30px;
 	}
 
     .desktop{
@@ -195,23 +196,85 @@ footer{
 
 /* Tablet queries ---------- */
 
-@media (min-width: 769px) and (orientation: portrait) {
+@media (min-width: 769px) {
+
+    .headerContainer{
+        height: 100px;
+    }
 
 	.aboutUs li {
-        font-size: medium;
+        font-size: 20px;
         margin-right: 15px;
     }
 
-    button {
-		width: 70px;
-    	height: 40px;
-	}
-
+    .brandImages img {
+        
+        height: 60px;
+    }
     
     .shippingContainer{
-        margin-left: -15px;
-        margin-right: 20px;
+        margin-right: -10px;
+        margin-left: 5px;
+        
     }
 }
 
 
+/* ---------------desktop queries---------------- */
+
+@media (min-width: 900px){
+
+    html {
+        font-size: 25px;
+    }
+    
+    p {
+        font-size: 30px;
+    }
+
+    .headerContainer{
+        height: 150px;
+    }
+
+	.aboutUs li {
+        font-size: 25px;
+        margin-right: 35px;
+    }
+
+    .filtersButtonsContainer {
+        top: 200px;
+        right: 100px;
+    }
+
+    .filtersButtonsContainer button {
+        width: 80px;
+        height: 45px;
+    }
+
+    .filtersBrandscontainer {
+        height: 120px;
+    }
+
+    .brandImages img {
+        width: 100px;
+        height: 80px;
+    }
+
+    .footerTittle h1{
+        font-size: 50px;
+        border-bottom: 3px dotted lightgray;
+    }
+
+    .detailsContainer {
+        flex-wrap: nowrap;
+        flex-direction: row-reverse;
+    }
+
+    .details {
+        box-shadow: 0px 0px 100px -2px lightgray;
+    }
+
+    .details h4, .listInfo, .listConditions {
+        font-size: 20px;
+    }
+}
