--- a/src/public/css/sliderCarrousel.css
+++ b/src/public/css/sliderCarrousel.css
@@ -47,7 +47,7 @@
 
 .carousel, .carouselTwo, .carouselThree {
 	display: flex;
-	margin: 10px;
+	margin: 15px 20px;
 	overflow-x: hidden;
 	transition: transform 0.5s ease-in-out;
 }
@@ -78,22 +78,25 @@
 	
 }
 
+.carouselButtons{
+	display: flex;
+    justify-content: space-between;
+}
   
 .btn {
-	position: relative;
 	border: none;
     background-color: transparent;
 	color: lightgray;
 }
   
 #prev, #prev2, #prev3 {
-	bottom: 150px;
-    left: -24px;
+	margin-top: -130px;
+    margin-left: -10px;
 }
 
 #next, #next2, #next3  {
-	right: -17.5rem;
-    bottom: 150px;
+	margin-right: -10px;
+    margin-top: -130px;
 }
 
 @keyframes slide {
@@ -112,7 +115,7 @@
 
 /*--------- break Points------------------ */
 
-@media (min-width: 461px) and (orientation: portrait) {
+@media (min-width: 461px) {
 
 	.slider-frame img {
 		height: 250px;
@@ -121,46 +124,71 @@
 	.trending, .trendingTwo, .trendingThree {
 		width: calc(94% / 4);
 		text-align: center;
-    	
-	}
-	.carousel, .carouselTwo, .carouselThree{
-		margin-left: 25px;
-
-	}
-
-	#next, #next2, #next3  {
-		right: -22rem;
 	}
 }
 
-@media (min-width: 520px) and (orientation: portrait) {
+@media (min-width: 520px)  {
 
 	.carouselTitle {
 		height: 60px;
-	}
-
-	#next, #next2, #next3 {
-		right: -25.5rem;
-	}
-}
-
-@media (min-width: 600px) and (orientation: portrait) {
-
-	#next, #next2, #next3 {
-		right: -30rem;
 	}
 }
 
 /*----- Tablet queries ------------- */
 
-@media (min-width: 769px) and (orientation: portrait) {
+@media (min-width: 769px) {
+
+	.carousel, .carouselTwo, .carouselThree{
+		margin-left: 35px;
+	}
 
 	.trending, .trendingTwo, .trendingThree {
 		width: calc(92% / 5);
 		text-align: center;
 	}
 
-	#next, #next2, #next3 {
-		right: -37rem;
+	#prev, #prev2, #prev3{
+		margin-left: 2px;
 	}
+
+	#next, #next2, #next3 {
+	margin-right: 10px;
+	}
+
+}
+
+@media (min-width: 900px) {
+
+
+	.slider-frame img {
+    height: 400px;
+	text-align: center;
+
+	}
+
+	.carouselTitle {
+		height: 85px;
+	}
+
+	.trending, .trendingTwo, .trendingThree {
+		width: calc(97% / 5);
+		text-align: center;
+		font-size: 20px;
+	}
+
+	.trending p, .trendingTwo p, .trendingThree p {
+		font-size: 25px;
+		
+	}
+
+	.trending img, .trendingTwo img, .trendingThree img {
+		width: 110px;
+    	height: 120px;
+		border: none;
+	}
+
+	.trending h3, .trendingTwo h3, .trendingThree h3 {
+		font-size: 30px;
+	}
+
 }
