login&register done

--- a/src/views/users/loginRegister.ejs
+++ b/src/views/users/loginRegister.ejs
@@ -6,14 +6,14 @@
 
       <div class="user_options-text">
         <div class="user_options-unregistered">
-          <h2 class="user_unregistered-title">Aun no te has registrado?</h2>
+          <h2 class="user_unregistered-title">Aun estas registrad@ ?</h2>
           <p class="user_unregistered-text">registrate gratis y empieza a explorar el mundo de la tecnologia como nunca antes.</p>
           <button class="user_unregistered-signup" id="signup-button">Crear cuenta</button>
         </div>
   
         <div class="user_options-registered">
           <h2 class="user_registered-title">Tienes alguna cuenta?</h2>
-          <p class="user_registered-text"> Es un placer tenerte nuevamente.</p>
+          <p class="user_registered-text"> Sera un placer tenerte de vuelta.</p>
           <button class="user_registered-login" id="login-button">Login</button>
         </div>
       </div>
