--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,5 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
 
 body{
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center; 
     flex-direction: column;
